en/v2026.10.0/_sources/autoapi/pudl/extract/vcerare/index.rst.txt
pudl.extract.vcerare
====================

.. py:module:: pudl.extract.vcerare

.. autoapi-nested-parse::

   Extract VCE Resource Adequacy Renewable Energy (RARE) Power Dataset.

   This dataset has 1,000s of columns, so we don't want to manually specify a rename on
   import because we'll pivot these to a column in the transform step. We adapt the
   standard extraction infrastructure to simply read in the data.

   Each annual zip folder contains a folder with three files:
   Wind_Power_140m_Offshore_county.csv
   Wind_Power_100m_Onshore_county.csv
   Fixed_SolarPV_Lat_UPV_county.csv

   The drive also contains one more CSV file: vce_county_lat_long_fips_table.csv. This gets
   read in when the fips partition is set to True.



Attributes
----------

.. autoapisummary::

   pudl.extract.vcerare.logger
   pudl.extract.vcerare.VCERARE_PAGES
   pudl.extract.vcerare.DATETIME_HOUR_OF_YEAR_START_YEAR


Functions
---------

.. autoapisummary::

   pudl.extract.vcerare._clean_column_name
   pudl.extract.vcerare._vcerare_column_types
   pudl.extract.vcerare.extract_vcerare
   pudl.extract.vcerare.raw_vcerare__lat_lon_fips


Module Contents
---------------

.. py:data:: logger

.. py:data:: VCERARE_PAGES

.. py:data:: DATETIME_HOUR_OF_YEAR_START_YEAR
   :value: 2024


.. py:function:: _clean_column_name(col: str) -> str

   Match the raw VCE RARE column naming convention to PUDL's snake_case.


.. py:function:: _vcerare_column_types(year: int) -> collections.abc.Callable[[list[str]], dict[str, str]]

   Build a DuckDB ``columns`` schema from a raw VCE RARE CSV header row.

   Every column is a per-county/subregion capacity factor (``DOUBLE``) except the
   first, unnamed column, which is always ``hour_of_year`` and whose type depends
   on the report year (see ``DATETIME_HOUR_OF_YEAR_START_YEAR``). The set of
   county/subregion columns is not stable across vintages, so it's always derived
   from the actual header row rather than hardcoded.


.. py:function:: extract_vcerare(context) -> tuple[dict[int, pudl.helpers.ParquetData], dict[int, pudl.helpers.ParquetData], dict[int, pudl.helpers.ParquetData]]

   Extract data from all vcerare pages and write to parquet files.


.. py:function:: raw_vcerare__lat_lon_fips(context) -> pandas.DataFrame

   Extract lat/lon to FIPS and county mapping CSV.

   This dataframe is static, so it has a distinct partition from the other datasets and
   its extraction is controlled by a boolean in the ETL run.


